# LingChat

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  DEVELOPER_GUIDE.md  Makefile  README.md  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  start.bat  tsconfig.json  updata_core.py  updata_main.py  version
.github/: verify-ios.yml
.github/workflows/: build-android.yml  build-frontend.yml  build-release.yml  dev-build-android.yml  dev-build.yml  release-fix.yml  release-patch-pack.yml  release.yml  verify-ios.yml
Demo/LingChat-Pal/: package.json  pnpm-lock.yaml  run.bat  tsconfig.json  vite.config.ts
Demo/editor/: 123.md  main.py
docs/: implementation_plan.md  自动更新逻辑.md
docs/android/: migration.md
docs/develop/: dev_guide.md
docs/updates/: 多人对话设计.md
frontend_vue/: .gitignore  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend_vue/src/: App.vue  components.d.ts  main.ts
ling_chat/: main.py
ling_chat/api/: app_server.py  chat_advanced.py  chat_adventure.py  chat_ambient.py  chat_background.py  chat_cache.py  chat_character.py  chat_history.py  chat_info.py  chat_music.py  chat_sandbox.py  chat_scene.py  chat_schedule.py  chat_script.py  console_logs.py  env_config.py  file_selector.py  frontend_routes.py  llm_config_api.py  llm_test_api.py  new_chat_main.py  routes_manager.py  update_api.py
ling_chat/character_plus/: downloader.py  scandb.py
ling_chat/configs/: __init__.py  llm_config.py  llm_toml_config.py
ling_chat/core/: adventure_trigger.py  console_log_service.py  logger.py  pic_analyzer.py  webview.py
ling_chat/game_database/: converts.py  database.py  models.py  test_migration.py
ling_chat/schemas/: schedule_settings.py
scripts/: convert_images_to_webp.py  download_emotion_model.mjs  generate-android-icons.mjs  generate-data-manifest.js  generate-latest-json.mjs  prepare-bundled-resources.mjs  prepare-desktop-resources.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
(+442 files in other folders)
