[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ling-chat"
version = "0.4.0pre"
description = "Ai驱动的聊天，陪伴软件与gal引擎"
readme = "README.md"
authors = [
    { name = "0x00-pl", email = "0x00.pl@gmail.com" },
]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.0",
    "openai>=1.85.0",
    "platformdirs>=4.3.8",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
    "mss>=10.0.0",
    "py7zr>=1.0.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "sqlmodel>=0.0.31",
    "pyyaml>=6.0.2",
    "imagehash>=4.3.2",
    "rapidocr-onnxruntime>=1.4.4",
    "packaging>=21.0",
    "tqdm>=4.65.0",
    "anthropic>=0.100.0"
]

[project.optional-dependencies]
gui = [
    "pywebview>=5.4",
    "pynput>=1.8.1",
]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.1",
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.2.1",
]

[tool.setuptools]
packages = ["ling_chat"]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.pip]
resolution = "highest"

[tool.ruff]
# 设置最大行长度
line-length = 88
# 目标Python版本与项目保持一致
target-version = "py313"
# 指定要检查的源代码目录
exclude = ["others"]
include = ["ling_chat/**/*.py", "tests/**/*.py", "main.py"]

[tool.ruff.lint]
# 启用pycodestyle errors (E), warnings (W), pyflakes (F), isort (I), flake8-comprehensions (C), flake8-bugbear (B)
select = ["E", "W", "F", "I", "C", "B"]
# 忽略行长度过长的错误，由格式化工具处理
ignore = ["E501", "C901"]

# 为__init__.py文件忽略未使用的导入（F401）
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ty.src]
include = ["ling_chat", "tests"]

# 运行环境
[tool.ty.environment]
python-version = "3.13"

# 规则严重度
# no-matching-overload: 忽略. OpenAI/Anthropic 等 SDK 的 create() 有大量 overload,
#   **kwargs 解包无法静态匹配具体签名，但运行时完全正确.
[tool.ty.rules]
no-matching-overload = "ignore"
